<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mariojc29.imc.IMC">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="87dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texo_altura"
                android:id="@+id/textView"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/altura"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:maxLength="3"
                android:hint="@string/texo_haltura" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="87dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_peso"
                android:id="@+id/textView2"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/peso"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:maxLength="3"
                android:hint="@string/texto_hpeso" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_calcular"
                android:id="@+id/igual"
                android:layout_gravity="center_horizontal"
                android:onClick="CalcularOnClick"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_IMC"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:textSize="50dp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
